Cambio en el POM

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 main: clp.zkaleejoo.ClearLagPlus
-version: 1.0.3
+version: ${project.version}
 name: ClearLagPlus
 author: ZkAleeJoo
 api-version: 1.20
