--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,18 @@
 
     <groupId>clp.zkaleejoo</groupId>
     <artifactId>ClearLagPlus</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.3</version>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
+
+    
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
